# vjepa2-video-captioning

./: .gitignore  README.md  dataset.py  evaluate.py  infer.py  prepare_annotations.py  preprocess_something_something_v2.py  pyproject.toml  train.py
models/: model.py  qformer.py
