[project]
name = "vjepa2-video-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "numpy>=2.3.4",
    "torch>=2.9.1",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]
